force-app/main/default/objects/Main_Bank_List_View__c/Main_Bank_List_View__c.object-meta.xml
<CustomObject>
    <label>Main Bank List View</label>
    <nameField>
        <displayFormat>Customer-{0000000000}</displayFormat>
        <label>Main Bank Listview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Main Bank List Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>