force-app/main/default/objects/Main_Bank_List_View__c/fields/Assigned_BRC_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_BRC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned BRC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Main_Bank_Listviews</relationshipName>
    <type>Lookup</type>
</CustomField>