force-app/main/default/objects/Main_Bank_List_View__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>