force-app/main/default/objects/Main_Bank_List_View__c/fields/First_Received_Salary_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Received_Salary_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Received Salary Date</label>
    <type>Date</type>
</CustomField>