force-app/main/default/objects/Main_Bank_List_View__c/fields/Has_Call_List__c.field-meta.xml
<CustomField>
    <fullName>Has_Call_List__c</fullName>
    <label>Has Call List</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>