force-app/main/default/objects/Main_Bank_List_View__c/fields/Health_PA__c.field-meta.xml
<CustomField>
    <fullName>Health_PA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Health/PA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>