force-app/main/default/objects/Main_Bank_List_View__c/fields/Is_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin__c</fullName>
    <formula>OR($User.UserProfileName__c = &apos;System Administrator&apos;,$User.UserProfileName__c = &apos;TMB System Administrator&apos;,$User.UserProfileName__c = &apos;TMB CRM Admin Profile&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Admin</label>
    <type>Checkbox</type>
</CustomField>