force-app/main/default/objects/Main_Bank_List_View__c/fields/Listview_Filter001__c.field-meta.xml
<CustomField>
    <fullName>Listview_Filter001__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Listview Filter001</label>
    <length>10</length>
    <type>Text</type>
</CustomField>