force-app/main/default/objects/Main_Bank_List_View__c/fields/Mainbank_Listview005_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Mainbank_Listview005_As_Of_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>