force-app/main/default/objects/Main_Bank_List_View__c/fields/Mortor__c.field-meta.xml
<CustomField>
    <fullName>Mortor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>