force-app/main/default/objects/Main_Bank_List_View__c/fields/Omni_KM_005__c.field-meta.xml
<CustomField>
    <fullName>Omni_KM_005__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Omni KM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>