force-app/main/default/objects/Main_Bank_List_View__c/fields/Policy_Year_Due_This_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Policy_Year_Due_This_Next_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Year Due This/Next Month</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>