force-app/main/default/objects/Main_Bank_List_View__c/fields/Term_Fund_Value__c.field-meta.xml
<CustomField>
    <fullName>Term_Fund_Value__c</fullName>
    <label>Term Fund Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>