force-app/main/default/objects/Main_Bank_List_View__c/fields/test_upsert__c.field-meta.xml
<CustomField>
    <fullName>test_upsert__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>test upsert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>