force-app/main/default/objects/Main_Bank_List_View__c/fields/Work_Place__c.field-meta.xml
<CustomField>
    <fullName>Work_Place__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>