force-app/main/default/objects/Main_Bank_List_View__c/listViews/Customer_Maturity_This_Next_Month.listView-meta.xml
<ListView>
    <fullName>Customer_Maturity_This_Next_Month</fullName>
    <booleanFilter>1 AND( 2 OR 3 OR 4 OR 5)</booleanFilter>
    <columns>Last_Contact_Date__c</columns>
    <columns>Has_Call_List__c</columns>
    <columns>Customer__c</columns>
    <columns>Age__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>Term_Fund_Value__c</columns>
    <columns>Fixed_Deposit_Value__c</columns>
    <columns>Life_Insurance_Contract_Value__c</columns>
    <columns>Customer_Maturity_This_Next_Month__c</columns>
    <columns>Omni_KM_004__c</columns>
    <columns>Mainbank_Listview004_As_Of_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Listview_Filter004__c</field>
        <operation>equals</operation>
        <value>FT004</value>
    </filters>
    <filters>
        <field>Is_Assigned_BRC_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Contact_Center_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Customer_Branch_Mannager__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Admin__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ลูกค้าประกันรถยนต์ - ใกล้ครบกำหนดสัญญากร</label>
    <language>en_US</language>
    <sharedTo>
        <group>BBG</group>
        <group>Contact_Center</group>
    </sharedTo>
</ListView>