force-app/main/default/objects/Main_Bank_List_View__c/listViews/Non_Main_Bank.listView-meta.xml
<ListView>
    <fullName>Non_Main_Bank</fullName>
    <booleanFilter>1 AND( 2 OR 3 OR 4 OR 5)</booleanFilter>
    <columns>Last_Contact_Date__c</columns>
    <columns>Has_Call_List__c</columns>
    <columns>Customer__c</columns>
    <columns>Age__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>Current_AUM__c</columns>
    <columns>Payroll_Flag__c</columns>
    <columns>Touch_Status__c</columns>
    <columns>Mainbank_Status__c</columns>
    <columns>Omni_KM_001__c</columns>
    <columns>Mainbank_Listview001_As_Of_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Listview_Filter001__c</field>
        <operation>equals</operation>
        <value>FT001</value>
    </filters>
    <filters>
        <field>Is_Contact_Center_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Customer_Branch_Mannager__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Admin__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Assigned_BRC_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ลูกค้า Non Main Bank</label>
    <sharedTo>
        <group>BBG</group>
        <group>Contact_Center</group>
    </sharedTo>
</ListView>